Added support for mobile devices

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -17,6 +17,7 @@
     /* align-items: center;
     justify-content: center;  enable this to center align the image */
     overflow-x: hidden;
+    overflow-y: hidden;
     /* background-color: red; */
 }
 
